# crust

./: Cargo.toml  README.md
docs/: authoring.md  contributing.md
examples/custom/: crust.build
examples/custom/src/: main.c
examples/getting-started/: README.md  crust.build
examples/getting-started/src/: main.c
examples/hello/: crust.build
examples/hello/src/: main.c  util.c
src/: main.rs
src/backend/: make.rs  mod.rs  native.rs  ninja.rs
src/config/: mod.rs
src/executor/: mod.rs
src/graph/: mod.rs
