[package]
name = "crust"
version = "0.1.0"
edition = "2021"
authors = ["Crust Contributors"]
description = "Meson-like build system CLI experiment"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
num_cpus = "1.16"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
